--- a/app/index.html
+++ b/app/index.html
@@ -828,10 +828,32 @@
   <section class="author" style="background-image: url(images/author-bg.jpg);">
     <div class="author__box">
       <div class="author__title">
-        Over <span>20,000</span> Author 
+        Over <span>20,000</span> Author
         Are Involved Here!
       </div>
       <a href="#" class="author__link">Become A Author</a>
+    </div>
+  </section>
+  <section class="tutorial">
+    <div class="container">
+      <div class="tutorial__title title">
+        Free Monthly Tutorials To Help You With Your Project
+      </div>
+      <div class="tutorial__inner">
+        <div class="tutorial__item">
+          <div class="tutorial__img" style="background-image: url(images/tutorial-item.jpg);"></div>
+          <a href="#" class="tutorial__link">Web Design Tutorials</a>
+        </div>
+        <div class="tutorial__item">
+          <div class="tutorial__img" style="background-image: url(images/tutorial-item.jpg);"></div>
+          <a href="#" class="tutorial__link">WordPress Tutorials</a>
+        </div>
+        <div class="tutorial__item">
+          <div class="tutorial__img" style="background-image: url(images/tutorial-item.jpg);"></div>
+          <a href="#" class="tutorial__link">HTML & CSS Tutorials</a>
+        </div>
+      </div>
+    </div>
     </div>
   </section>
 
