added new ihtml page

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
 
 <body>
   <!-- start header -->
+<div class="wrapper">
+  <div class="content">
   <header class="header">
     <div class="header__top">
       <div class="container">
@@ -323,7 +325,7 @@
     </div>
   </section>
   <section class="product__slider">
-    <div class="container__fluid">
+    <div class="container__fluid container__fluid-slider">
       <div class="product__slider-title title">
         This Week Trending Products
       </div>
@@ -857,6 +859,7 @@
     </div>
     </div>
   </section>
+</div>
   <footer class="footer">
     <div class="footer__content">
       <div class="container">
@@ -930,7 +933,7 @@
       </div>
     </div>
   </footer>
-
+</div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
